# aws-ops

./: README.md  main.py  pyproject.toml  requirements.txt
aws_ops/: cli.py  ec2.py
aws_ops_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
