[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-ops-cli"
version = "1.0.0"
description = "A lightweight CLI to manage AWS EC2 from terminal"
authors = [
    { name="Shashank", email="your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3"
]

[project.scripts]
aws-ops = "aws_ops.cli:run"
